# planpoker

./: Cargo.toml  README.md
crates/backend/: Cargo.toml
crates/backend/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/frontend/: Cargo.toml  index.html  index.scss
crates/frontend/src/: agents.rs  components.rs  main.rs  route.rs
crates/frontend/src/agents/: room_agent.rs  ws_agent.rs
crates/frontend/src/components/: card.rs  loading.rs  lobby.rs  room.rs
