[package]
name = "planpoker-backend"
version = "0.1.0"
edition = "2018"

[dependencies]
planpoker-common = { path = "../common", features = ["json", "binary"] }

actix = "0.10"
actix-codec = "0.3"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.3"
env_logger = "0.8"
serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
rand = "0.7"