[package]
name = "planpoker-frontend"
version = "0.1.0"
edition = "2018"

[dependencies]
planpoker-common = { path = "../common", features = ["json", "binary"] }

yew = { git = "https://github.com/yewstack/yew.git", rev = "5eda7ed" }
yew-router = { git = "https://github.com/yewstack/yew.git", rev = "5eda7ed" }
yew-services = { git = "https://github.com/yewstack/yew.git", rev = "5eda7ed" }
web-sys = "0.3.51"
anyhow = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
wasm-logger = "0.2"
log = "0.4"
uuid = "0.8"